v1.1.0 向上到1.21,LexFg转移到NeoFg.困难模式下焦糖传送门新逻辑。